tests/ui/transmutability/safety/should_reject_if_ref_src_has_safety_invariant.stderr
error[E0277]: `u8` cannot be safely transmuted into `Src`
  --> $DIR/should_reject_if_ref_src_has_safety_invariant.rs:23:41
   |
LL |     assert::is_transmutable::<&mut Src, &mut Dst>();
   |                                         ^^^^^^^^ `Src` may carry safety invariants
   |
note: required by a bound in `is_transmutable`
  --> $DIR/should_reject_if_ref_src_has_safety_invariant.rs:13:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src> // safety is NOT assumed
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
